optimized z-chart reader